--- a/html/history.html
+++ b/html/history.html
@@ -76,7 +76,8 @@
         }
     
         a.active {
-            background-color: rgb(179, 179, 179); 
+        background-color: rgb(179, 179, 179); 
+        pointer-events: none;
         }
     
         @media screen and (max-width: 600px) {
