--- a/html/settings.html
+++ b/html/settings.html
@@ -77,6 +77,7 @@
     
         a.active {
             background-color: rgb(179, 179, 179); 
+            pointer-events: none;
         }
     
         @media screen and (max-width: 600px) {
