--- a/html/automate.html
+++ b/html/automate.html
@@ -21,6 +21,8 @@
         top: 0;
         left: 0;
         z-index: 1;
+        height: 70px;
+        background-color: #f4f4f4;
     }
 
     #title-bar a {
