--- a/html/history.html
+++ b/html/history.html
@@ -24,10 +24,16 @@
         }
     
         #title-bar a {
-            text-decoration: none;
+            width: 100%;
             color: #000000;
-            font-size: 25px;
-            font-weight: bolder;
+            padding: 20px 0px 0px 30px;
+            box-sizing: border-box;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            height: 70px;
+            background-color: #f4f4f4;
         }
     
         #sidebar {
