--- a/html/overview.html
+++ b/html/overview.html
@@ -145,7 +145,7 @@
 <script>
     var data = [];
 
-    var gateway = `ws://${window.location.hostname}/ws`;
+    var gateway = `ws://${window.location.hostname}/overview`;
     var websocket;
     window.addEventListener('load', onLoad);
     function initWebSocket() {
