--- a/html/settings.html
+++ b/html/settings.html
@@ -94,7 +94,7 @@
             border: 1px solid #999;
             font-size: large;
         }
-        
+
         .switch {
             position: absolute;
             right: 0;
@@ -161,7 +161,6 @@
 </head>
 
 <body>
-
     <div id="title-bar">
         <a>
             <svg height="24" width="24" viewBox="0 0 384 512"><path opacity="1" fill="#1E3050" d="M0 256L28.5 28c2-16 15.6-28 31.8-28H228.9c15 0 27.1 12.1 27.1 27.1c0 3.2-.6 6.5-1.7 9.5L208 160H347.3c20.2 0 36.7 16.4 36.7 36.7c0 7.4-2.2 14.6-6.4 20.7l-192.2 281c-5.9 8.6-15.6 13.7-25.9 13.7h-2.9c-15.7 0-28.5-12.8-28.5-28.5c0-2.3 .3-4.6 .9-6.9L176 288H32c-17.7 0-32-14.3-32-32z"/></svg> 
@@ -268,7 +267,8 @@
     var passwordRegex = /^.{8,}$/;
     var ssid = prompt('Enter WiFi Name:');
     if (ssid !== null) {
-        if (!ssidRegex.test(ssid)) { // Check if SSID matches the pattern
+        // Check if SSID matches the pattern
+        if (!ssidRegex.test(ssid)) { 
             alert('Invalid WiFi name. Please enter up to 32 characters, using only alphanumeric characters, _, - and space.');
             return; 
         }
@@ -291,19 +291,21 @@ document.getElementById('hotspot').addEventListener('click', function() {
     var passwordRegex = /^.{8,10}$/;
 
     var ssid = prompt('Enter Hotspot Name (up to 10 characters):');
-
-    if (ssid !== null) { // Check if user hasn't cancelled the SSID prompt
-        if (!ssidRegex.test(ssid)) { // Check if SSID matches the pattern
+    // Check if user hasn't cancelled the SSID prompt
+    if (ssid !== null) { 
+        // Check if SSID matches the pattern
+        if (!ssidRegex.test(ssid)) { 
             alert('Invalid Hotspot Name. Please enter up to 10 characters, using only alphanumeric characters, _, - and space.');
-            return; // Exit the function
+            return;
         }
 
         var password = prompt('Enter WiFi Password (at least 8 and up to 10 characters):');
-
-        if (password !== null) { // Check if user hasn't cancelled the password prompt
-            if (!passwordRegex.test(password)) { // Check if password matches the pattern
+         // Check if user hasn't cancelled the password prompt
+        if (password !== null) {
+            // Check if password matches the pattern
+            if (!passwordRegex.test(password)) { 
                 alert('Invalid Hotspot password. Password must be at least 8 characters long.');
-                return; // Exit the function
+                return;
             }
             websocket.send("02"+ssid+":=:"+password);
             alert('Hotspot updated successfully!\nName: ' + ssid + '\nPassword: ' + password);
