--- a/html/overview.html
+++ b/html/overview.html
@@ -32,6 +32,18 @@
             font-size: 25px;
             font-weight: bolder;
         }
+
+        #time {
+            position: fixed;
+            margin: -2px 10px 0px 0px;
+            padding: 10px;
+            right: 0;
+            font-size: 16px;
+            font-weight: bold;
+            border: 2px solid rgb(192, 192, 192);
+            border-radius: 16px;
+            background-color: rgb(224, 224, 224);
+       }
     
         #sidebar {
             margin-top: 45px;
@@ -63,7 +75,7 @@
             background-color: white;
             border-left: 2px solid #555;
             border-top: 2px solid #555;
-            margin-top: calc(55px + 20px);
+            margin-top: 75px;
             margin-left: 145px;
             padding: 4px 10px 10px 10px;
             border-top-left-radius: 10px;
@@ -103,7 +115,7 @@
             font-size: 1.2rem;
             color: #1282A2;
         }
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 770px) {
             #w {
                 display: none;
             }
@@ -134,6 +146,7 @@
             <svg height="24" width="24" viewBox="0 0 384 512"><path opacity="1" fill="#1E3050" d="M0 256L28.5 28c2-16 15.6-28 31.8-28H228.9c15 0 27.1 12.1 27.1 27.1c0 3.2-.6 6.5-1.7 9.5L208 160H347.3c20.2 0 36.7 16.4 36.7 36.7c0 7.4-2.2 14.6-6.4 20.7l-192.2 281c-5.9 8.6-15.6 13.7-25.9 13.7h-2.9c-15.7 0-28.5-12.8-28.5-28.5c0-2.3 .3-4.6 .9-6.9L176 288H32c-17.7 0-32-14.3-32-32z"/></svg> 
             <span id="w">Home Energy Monitoring & Control System</span>
             <span id="s"> HEMCS</span>
+            <span id="time">Wed Apr 3 12:12</span>
         </a>
     </div>
 
@@ -341,5 +354,21 @@ function resizeCanvas() {
 }
 
 window.addEventListener('resize', resizeCanvas);
+
+// update time
+function updateTime(epochTime, use24HourFormat = false) {
+    const date = new Date(epochTime * 1000);
+    let options = { weekday: 'short', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+
+    if (use24HourFormat) {
+        options.hour12 = false;
+    }
+
+    const timeString = date.toLocaleString('en-US', options).replace(/,/g, '');
+    document.getElementById('time').innerText = timeString;
+}
+
+updateTime(Date.now() / 1000);
+setInterval(() => updateTime(Date.now() / 1000), 1000);
 </script>
 </html>
