apply front end changes

--- a/html/overview.html
+++ b/html/overview.html
@@ -193,7 +193,7 @@ var isTableInit = false;
 
 window.addEventListener('load', onLoad);
 
-var gateway = `ws://${window.location.hostname}/ws`;
+var gateway = `ws://${window.location.hostname}/overview`;
 var websocket;
 
 function initWebSocket() {
